[HS-10] fix : 컨벤션, 불변 리스트, DisplayName 어노테이션 반영